--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "express": "^4.18.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "apollo-angular": "^3.0.1",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^16"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.5",
@@ -36,5 +39,10 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
+  },
+  "overrides": {
+    "apollo-angular": {
+      "@angular/core": "$@angular/core"
+    }
   }
 }
