--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.5",
+    "@angular/cdk": "^14.0.4",
     "@angular/common": "^14.0.5",
     "@angular/compiler": "^14.0.5",
     "@angular/core": "^14.0.5",
     "@angular/forms": "^14.0.5",
+    "@angular/material": "^14.0.4",
     "@angular/platform-browser": "^14.0.5",
     "@angular/platform-browser-dynamic": "^14.0.5",
     "@angular/router": "^14.0.5",
+    "@apollo/client": "^3.0.0",
+    "apollo-angular": "^3.0.1",
     "express": "^4.18.1",
+    "graphql": "^16",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "apollo-angular": "^3.0.1",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.5",
